UG documentation for SfPdfViewer in Xamarin.Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -498,10 +498,14 @@
         <ul>
 		<li><a href="/xamarin/sfpdfviewer/overview">Overview</a></li>
         <li><a href="/xamarin/sfpdfviewer/getting-started">Getting Started</a></li>
-		<li><a href="/xamarin/sfpdfviewer/Enable-And-Disable-Built-in-Toolbar">Enable or disable built-in toolbar</a></li>
-		<li><a href="/xamarin/sfpdfviewer/Designing-a-Custom-Toolbar">Designing a custom Toolbar</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Designing-a-Custom-Toolbar">Designing a Custom Toolbar</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Built-in-toolbar">Working with Built-In Toolbar</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Search-For-Text-Instance">Search for a Text Instance</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Select-And-Copy-Text">Select and Copy the Text</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Hyperlink">Hyperlink Navigation</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Documentlink">Table of content navigation</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Ink">Ink PDFs</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
 		</ul>
 	</li>
     <li>
