XAMARIN-15572, Missing methods xamarin.forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -165,7 +165,14 @@
             <li><a href="/xamarin/sfchart/performance">Performance</a></li>
             <li><a href="/xamarin/sfchart/chartannotation">Annotations</a></li>
             <li><a href="/xamarin/sfchart/technicalIndicators">Technical Indicators</a></li>
-            <li><a href="/xamarin/sfchart/export">Exporting</a></li>          
+            <li><a href="/xamarin/sfchart/export">Exporting</a></li>        
+            <li>
+                How to
+                <ul>                   
+                    <li><a href="/wpf/sfchart/how-to/transform-axis-value-to-pixel-value-and-vice-versa">Transform axis value to pixel value and vice versa</a></li>
+                    <li><a href="/wpf/sfchart/how-to/How-to-get-the-touch-actions-in-chart ">How to get the touch actions in chart</a></li>
+                </ul>
+            </li>  
         </ul>
     </li>	
     <li>
