XAMARIN-15572, Included additional contents

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -169,7 +169,8 @@
             <li>
                 How to
                 <ul>                   
-                    <li><a href="/wpf/sfchart/how-to/transform-axis-value-to-pixel-value-and-vice-versa">Transform axis value to pixel value and vice versa</a></li>
+                    <li><a href="/wpf/sfchart/how-to/Transform-axis-value-to-pixel-value-and-vice-versa">Transform axis value to pixel value and vice versa</a></li>
+                    <li><a href="/wpf/sfchart/how-to/Transform-axis-value-to-coefficient-value-and-vice-versa">Transform axis value to Coefficient value and vice versa</a></li>
                     <li><a href="/wpf/sfchart/how-to/How-to-get-the-touch-actions-in-chart ">How to get the touch actions in chart</a></li>
                 </ul>
             </li>  
