--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -166,14 +166,7 @@
             <li><a href="/xamarin/sfchart/chartannotation">Annotations</a></li>
             <li><a href="/xamarin/sfchart/technicalIndicators">Technical Indicators</a></li>
             <li><a href="/xamarin/sfchart/export">Exporting</a></li>        
-            <li>
-                How to
-                <ul>                   
-                    <li><a href="/wpf/sfchart/how-to/Transform-axis-value-to-pixel-value-and-vice-versa">Transform axis value to pixel value and vice versa</a></li>
-                    <li><a href="/wpf/sfchart/how-to/Transform-axis-value-to-coefficient-value-and-vice-versa">Transform axis value to Coefficient value and vice versa</a></li>
-                    <li><a href="/wpf/sfchart/how-to/How-to-get-the-touch-actions-in-chart ">How to get the touch actions in chart</a></li>
-                </ul>
-            </li>  
+            <li><a href="/xamarin/sfchart/How-To">How to</a></li>        
         </ul>
     </li>	
     <li>
