--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -756,6 +756,9 @@
     <li>
         Release Notes
         <ul>
+		  <li>
+                <a href="/xamarin/release-notes/v16.2.0.x">v16.2.0.x</a>
+            </li>
             <li>
                 <a href="/xamarin/release-notes/v16.1.0.37">v16.1.0.37</a>
             </li>
