--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -349,7 +349,7 @@
 			<li><a href="/xamarin/sfkanban/Column">Column</a></li>
             <li><a href="/xamarin/sfkanban/Workflows">Workflows</a></li>
             <li><a href="/xamarin/sfkanban/Cards">Cards</a></li>
-			<li><a href="/xamarin/sfkanban/placeholderStyle">Placeholder Style</a></li>
+			<li><a href="/xamarin/sfkanban/placeholderStyle">Placeholder</a></li>
             <li><a href="/xamarin/sfkanban/Events">Events</a></li>
         </ul>
     </li>    
