Changes has added in xamarin-toc.html

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -113,6 +113,9 @@
             <li><a href="/xamarin/sfcarousel/getting-started">Getting Started</a></li>
             <li><a href="/xamarin/sfcarousel/linear-arrangement">Linear Arrangement</a></li>
             <li><a href="/xamarin/sfcarousel/populating-data">Populating Data</a></li>
+            <li><a href="/xamarin/sfcarousel/How-to-handle-numerous-data">How To Handle Numerous Data</a></li>
+            <li><a href="/xamarin/sfcarousel/LoadMore">Load More</a></li>
+            <li><a href="/xamarin/sfcarousel/UIVirtualization">UIVirtualization</a></li>
             <li><a href="/xamarin/sfcarousel/Transformation">Transformation</a></li>
             <li><a href="/xamarin/sfcarousel/Animation">Animation</a></li>
             <li><a href="/xamarin/sfcarousel/how-to">How To</a></li>
@@ -521,6 +524,7 @@
             <li><a href="/xamarin/sfpicker/timepicker">Time Picker</a></li>
             <li><a href="/xamarin/sfpicker/datetimepicker">DateTime Picker</a></li>
             <li><a href="/xamarin/sfpicker/datepicker">Date Picker</a></li>
+            <li><a href="/xamarin/sfpicker/Looping">Looping</a></li>
         </ul>
     </li>
     <li>
