WPF-42074 : Added localization in SfKanban UG document.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -353,6 +353,7 @@
             <li><a href="/xamarin/sfkanban/Workflows">Workflows</a></li>
             <li><a href="/xamarin/sfkanban/Cards">Cards</a></li>
 			<li><a href="/xamarin/sfkanban/placeholderStyle">Placeholder</a></li>
+			<li><a href="/xamarin/sfkanban/Localization">Localization</a></li>
             <li><a href="/xamarin/sfkanban/Events">Events</a></li>
         </ul>
     </li>    
