XAMARIN-17330 -  Xamarin SfImageEditor ug document has been modified

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -334,7 +334,7 @@
 			<li><a href="/xamarin/sfimageeditor/shapes">Shapes</a></li>
 			<li><a href="/xamarin/sfimageeditor/transformation">Transformation</a></li>
 			<li><a href="/xamarin/sfimageeditor/crop">Crop</a></li>
-			<li><a href="/xamarin/sfimageeditor/save">Save And Reset Events</a></li>
+			<li><a href="/xamarin/sfimageeditor/save">Save and Events</a></li>
 			<li><a href="/xamarin/sfimageeditor/undo-redo">Undo Redo</a></li>
 			<li><a href="/xamarin/sfimageeditor/ToolbarCustomization">Toolbar Customization</a></li>
            <li><a href="/xamarin/sfimageeditor/Zooming">Zooming</a></li>
