Progress Bar documentation

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -604,6 +604,13 @@
         <ul>
             <li><a href="/xamarin/progressbar/Overview">Overview</a></li>
             <li><a href="/xamarin/progressbar/GettingStarted">Getting Started</a></li>
+           <li><a href="/xamarin/progressbar/States">States</a></li>
+           <li><a href="/xamarin/progressbar/Range">Define Range</a></li>
+           <li><a href="/xamarin/progressbar/Customcontent">Custom Content</a></li>
+          <li><a href="/xamarin/progressbar/Segments">Segments</a></li>
+           <li><a href="/xamarin/progressbar/Appearance">Appearance</a></li>
+           <li><a href="/xamarin/progressbar/Animation">Animation</a></li>
+           <li><a href="/xamarin/progressbar/Events">Events</a></li>
         </ul>
     </li>
     <li>
