XAMARIN-16781,UG documentation for OSM support

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -404,6 +404,7 @@
             <li><a href="/xamarin/SfMaps/Legend">Legend</a></li>
             <li><a href="/xamarin/SfMaps/ShapeCustomization">Shape Customization</a></li>
             <li><a href="/xamarin/SfMaps/UserInteraction">User Interaction</a></li>
+            <li><a href="/xamarin/SfMaps/MapsProvider">Maps Providers</a></li>
         </ul>
     </li>
 	 <li>
