--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -688,6 +688,7 @@
             <li><a href="/xamarin/sfschedule/data-bindings">Appointments</a></li>
             <li><a href="/xamarin/sfschedule/localization">Localization</a></li>
             <li><a href="/xamarin/sfschedule/date-navigations">Date Navigations</a></li>
+			<li><a href="/xamarin/sfschedule/timezone">Time Zone</a></li>
         </ul>
     </li>
 	<li>
