Renamed PDF Viewer in SfPdfViewer in XForms UG TOC

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -500,7 +500,7 @@
         </ul>
     </li>
 	<li>
-        PDF Viewer
+        SfPdfViewer
         <ul>
 		<li><a href="/xamarin/sfpdfviewer/overview">Overview</a></li>
         <li><a href="/xamarin/sfpdfviewer/getting-started">Getting Started</a></li>
