XAMARIN-16864 - Need to create sample for UG document for SfCheckBox and SfRadioButton

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -170,6 +170,15 @@
             <li><a href="/xamarin/sfchart/export">Exporting</a></li>        
             <li><a href="/xamarin/sfchart/How-To">How to</a></li>        
         </ul>
+    </li>
+	<li>
+        SfCheckBox
+        <ul>
+            <li><a href="/xamarin-android/sfcheckbox/overview">Overview</a></li>
+            <li><a href="/xamarin-android/sfcheckbox/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin-android/sfchart/populating-data">Visual Customization</a></li>
+            <li><a href="/xamarin-android/sfchart/charttitle">Event</a></li>           
+        </ul>
     </li>	
     <li>
         SfDataGrid
@@ -621,6 +630,15 @@
             <li><a href="/xamarin/sfpulltorefresh/getting-started">Getting Started</a></li>
             <li><a href="/xamarin/sfpulltorefresh/customization">Customization</a></li>
             <li><a href="/xamarin/sfpulltorefresh/PullToRefresh-Events">PullToRefresh Events</a></li>
+        </ul>
+    </li>
+	<li>
+        SfRadioButton
+        <ul>
+            <li><a href="/xamarin-android/sfradiobutton/overview">Overview</a></li>
+            <li><a href="/xamarin-android/sfradiobutton/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin-android/sfradiobutton/populating-data">Visual Customization</a></li>
+            <li><a href="/xamarin-android/sfradiobutton/charttitle">Event</a></li>           
         </ul>
     </li>
     <li>
