XAMARIN-17217: Have done the revamp for digital gauge

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -243,9 +243,9 @@
         <ul>
             <li><a href="/xamarin/sfdigitalgauge/overview">Overview</a></li>
             <li><a href="/xamarin/sfdigitalgauge/getting-started">Getting Started</a></li>
-            <li><a href="/xamarin/sfdigitalgauge/set-sizing-for-character-segment">Set Sizing for Character Segment</a></li>
-            <li><a href="/xamarin/sfdigitalgauge/various-types-of-segment">Various types of Segment</a></li>
-            <li><a href="/xamarin/sfdigitalgauge/display-special-characters">Display Special Characters</a></li>
+            <li><a href="/xamarin/sfdigitalgauge/customize character segments">Customize character segments</a></li>
+            <li><a href="/xamarin/sfdigitalgauge/character types">Character Types</a></li>
+            <li><a href="/xamarin/sfdigitalgauge/display types">Display types</a></li>
         </ul>
     </li>
     <li>
