Have done the code review change

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -245,7 +245,7 @@
             <li><a href="/xamarin/sfdigitalgauge/getting-started">Getting Started</a></li>
             <li><a href="/xamarin/sfdigitalgauge/customize character segments">Customize character segments</a></li>
             <li><a href="/xamarin/sfdigitalgauge/character types">Character Types</a></li>
-            <li><a href="/xamarin/sfdigitalgauge/display types">Display types</a></li>
+            <li><a href="/xamarin/sfdigitalgauge/display types">Display Types</a></li>
         </ul>
     </li>
     <li>
