--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -781,6 +781,9 @@
     <li>
         Release Notes
         <ul>
+            <li>
+                <a href="/xamarin/release-notes/v16.2.0.42">v16.2.0.42</a>
+            </li>
 		  <li>
                 <a href="/xamarin/release-notes/v16.2.0.41">v16.2.0.41</a>
             </li>
