XAMARIN-17869-Need to prepare a document for new feature list in SfDiagram

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -235,6 +235,8 @@
             <li><a href="/xamarin/sfdiagram/stencil">Stencil</a></li>
 			<li><a href="/xamarin/sfdiagram/layout">Layout</a></li>
 			 <li><a href="/xamarin/sfdiagram/Mindmap">Mindmap</a></li>
+			 <li><a href="/xamarin/sfdiagram/DrawingMode">DrawingMode</a></li>
+			 <li><a href="/xamarin/sfdiagram/Gridlines">Gridlines</a></li>
 			<li><a href="/xamarin/sfdiagram/Userhandles">Userhandles</a></li>
         </ul>
     </li>
