XAMARIN-8036 Need to Update UG documentation for the edit text annotation feature in Xamarin.Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -506,7 +506,7 @@
 		<li><a href="/xamarin/sfpdfviewer/Hyperlink">Hyperlink Navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Documentlink">Table of content navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Ink">Ink PDFs</a></li>
-		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">FreeText Annotation</a></li>
+		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">FreeText Annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
 		</ul>
 	</li>
