Moved Segmented control to hotfix

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -747,6 +747,19 @@
             <li><a href="/xamarin/sftreemap/treemap-elements">TreeMap Elements</a></li>
         </ul>
     </li>
+	    <li>
+        SfSegmentedControl
+        <ul>
+            <li><a href="/xamarin/sfsegmentedcontrol/overview">Overview</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/populating-data-source">Populating data source</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/dealing-with-selection-changed">Dealing with selection changed</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/display-mode">Display mode</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/indicating-the-selected-item">Indicating the selected item</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/handling-multiple-segments">Handling multiple segments</a></li>
+            <li><a href="/xamarin/sfsegmentedcontrol/customization">Customization</a></li>
+        </ul>
+    </li>
     <li>
         XlsIO
         <ul>
