--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -513,7 +513,8 @@
 		<li><a href="/xamarin/sfpdfviewer/Hyperlink">Hyperlink Navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Documentlink">Table of content navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Ink">Ink PDFs</a></li>
-		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">FreeText Annotations</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Shape-Annotation">Shape annotations</a></li>
+		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">Free text annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
 		</ul>
 	</li>
