Xamarin contents added and committed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -10,19 +10,27 @@
         <a href="/xamarin/introduction/system-requirements">System Requirements</a>
     </li>
 	<li>
+	    <a href="/xamarin/installation-and-deployment/download">Download</a>
+	</li>
+	<li>
+       Installation and Upgrade
+	    <ul>
+		    <li><a href="/xamarin/installation-and-deployment/install-using-the-web-installer ">Install using the Web Installer</a></li>			
+		    <li><a href="/xamarin/installation-and-deployment/install-using-the-offline-installer ">Install using the Offline Installer</a></li>
+			<li><a href="/xamarin/installation-and-deployment/essential-studio-mac-installer">Xamarin MAC Installer</a></li>
+			<li><a href="/xamarin/installation-and-deployment/installation-faq ">Installation FAQ</a></li>
+			<li><a href="/xamarin/installation-and-deployment/upgrade-from-one-version-to-another-version">Upgrade from one version to another version</a></li>
+			<li><a href="/xamarin/installation-and-deployment/upgrade-from-major-version-to-service-pack-version">Upgrade from major version to service pack version</a></li>
+			<li><a href="/xamarin/installation-and-deployment/upgrade-from-trial-version-to-license-version ">Upgrade from trial version to license version</a></li>
+		</ul>
+	</li>
+	<li>
         <a href="/xamarin/nuget-packages">NuGet Packages</a>
     </li>
     <li>
         <a href="/xamarin/introduction/compatibility-road-map">Xamarin.Forms compatibility road map</a>
     </li>    
 	 <li>
-        Download and Installation
-        <ul>
-            <li><a href="/xamarin/introduction/download-and-installation/mac">Mac</a></li>
-			<li><a href="/xamarin/introduction/download-and-installation/windows">Windows</a></li>        
-        </ul>
-    </li>
-    <li>
         Troubleshooting
         <ul>
             <li><a href="/xamarin/introduction/troubleshooting/PathTooLongException">System.IO.PathTooLongException occurs during sample browser compilation</a></li>      
