Topics re-organized for better visualization.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -388,19 +388,21 @@
         <ul>
             <li><a href="/xamarin/sflistview/Overview">Overview</a></li>
             <li><a href="/xamarin/sflistview/Getting-started">Getting Started</a></li>
-            <li><a href="/xamarin/sflistview/Working-with-SfListView">Working with SfListView</a></li>
+            <li><a href="/xamarin/sflistview/Working-with-SfListView">Working with ListView</a></li>
             <li><a href="/xamarin/sflistview/ViewAppearance">Appearance</a></li>
-			<li><a href="/xamarin/sflistview/Item-Size-Customization">Item Size Customization</a></li>
-			<li><a href="/xamarin/sflistview/Layouts">Layouts</a></li>
-			<li><a href="/xamarin/sflistview/Item-Drag-And-Drop">Item Reordering</a></li>
+	    <li><a href="/xamarin/sflistview/Scrolling">Scrolling</a></li>
+	    <li><a href="/xamarin/sflistview/Item-Size-Customization">Item Size Customization</a></li>
+	    <li><a href="/xamarin/sflistview/Layouts">Layouts</a></li>
+	    <li><a href="/xamarin/sflistview/Item-Drag-And-Drop">Item Reordering</a></li>
             <li><a href="/xamarin/sflistview/Sorting">Sorting</a></li>
             <li><a href="/xamarin/sflistview/Filtering">Filtering</a></li>
             <li><a href="/xamarin/sflistview/Grouping">Grouping</a></li>
             <li><a href="/xamarin/sflistview/HeaderandFooter">Header and Footer</a></li>
             <li><a href="/xamarin/sflistview/Selection">Selection</a></li>
             <li><a href="/xamarin/sflistview/Swiping">Swiping</a></li>
-	        <li><a href="/xamarin/sflistview/Pull-To-Refresh">Pull To Refresh</a></li>
+	    <li><a href="/xamarin/sflistview/Pull-To-Refresh">Pull To Refresh</a></li>
      	    <li><a href="/xamarin/sflistview/LoadMore">Load More</a></li>
+	    <li><a href="/xamarin/sflistview/MVVM">Working with MVVM</a></li>
         </ul>
     </li>
     <li>
