--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -826,6 +826,9 @@
     <li>
         Release Notes
         <ul>
+		<li>
+                <a href="/xamarin/release-notes/v16.2.0.46">v16.2.0.46</a>
+            </li>
             <li>
                 <a href="/xamarin/release-notes/v16.2.0.42">v16.2.0.42</a>
             </li>
