Added combobox in toc file

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -114,6 +114,24 @@
             <li><a href="/xamarin/sfcalendar/Feature-Comparison-across-the-different-platforms">Feature Comparison</a></li>
         </ul>
     </li>
+
+    <li>
+        SfComboBox
+        <ul>
+            <li><a href="/xamarin/sfcombobox/overview">Overview</a></li>
+            <li><a href="/xamarin/sfcombobox/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sfcombobox/populating-data">Populating Data </a></li>
+            <li><a href="/xamarin/sfcombobox/retrieving-selected-values">Retrieving Selected Values</a></li>
+            <li><a href="/xamarin/sfcombobox/multiple-selection">Multiple selection</a></li>
+            <li><a href="/xamarin/sfcombobox/highlighting-matched-text">Highlighting matched text</a></li>
+            <li><a href="/xamarin/sfcombobox/header-and-footer">Header and Footer</a></li>
+            <li><a href="/xamarin/sfcombobox/editable-modes">Editable Modes</a></li>
+            <li><a href="/xamarin/sfcombobox/dealing-with-suggestion-box">Dealing with Suggestion Box</a></li>
+            <li><a href="/xamarin/sfcombobox/customizing-comboBox">Customizing ComboBox</a></li>
+            <li><a href="/xamarin/sfcombobox/comboBox-filtering-options">ComboBox Filtering Options</a></li>
+        </ul>
+    </li>
+
     <li>
         SfCarousel
         <ul>
