Incuded Licensing path in toc file.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -28,6 +28,9 @@
         <a href="/xamarin/nuget-packages">NuGet Packages</a>
     </li>
     <li>
+        <a href="/xamarin/Licensing">Licensing</a> 
+    </li>
+    <li>
         <a href="/xamarin/introduction/compatibility-road-map">Xamarin.Forms compatibility road map</a>
     </li>    
 	 <li>
