XAMARIN-17934- Added Localization ug content for DataForm Xamarin Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -173,6 +173,7 @@
             <li><a href="/xamarin/sfdataform/Editors">Editors</a></li>           
             <li><a href="/xamarin/sfdataform/Validation">Validation</a></li>           
             <li><a href="/xamarin/sfdataform/Layout">Layout</a></li>           
+            <li><a href="/xamarin/sfdataform/Localization">Localization</a></li>
         </ul>
     </li>
     <li>
