--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -849,6 +849,9 @@
         Release Notes
         <ul>
 		<li>
+                <a href="/xamarin/release-notes/v16.2.0.50">v16.2.0.50</a>
+            </li>
+		<li>
                 <a href="/xamarin/release-notes/v16.2.0.46">v16.2.0.46</a>
             </li>
             <li>
