--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -473,6 +473,7 @@
             <li><a href="/xamarin/sfnavigationdrawer/Overview">Overview</a></li>
             <li><a href="/xamarin/sfnavigationdrawer/Getting-Started">Getting Started</a></li>
             <li><a href="/xamarin/sfnavigationdrawer/Main-Content">Setting Main Content</a></li>
+			 <li><a href="/xamarin/sfnavigationdrawer/Multi-Drawer">Multi Drawer</a></li>
             <li><a href="/xamarin/sfnavigationdrawer/Navigation-Pane-Sides">Configuring The Drawer In Different Sides</a></li>
             <li><a href="/xamarin/sfnavigationdrawer/Side-Pane-Content">Setting Sliding Panel Content</a></li>
             <li><a href="/xamarin/sfnavigationdrawer/Side-Pane-Sizing">Setting Sliding Panel size</a></li>
