Toc file changed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -445,7 +445,7 @@
             <li><a href="/xamarin/SfMaps/BubbleMarker">Bubble Marker</a></li>
             <li><a href="/xamarin/SfMaps/ColorMapping">Color Mapping</a></li>
             <li><a href="/xamarin/SfMaps/Legend">Legend</a></li>
-            <li><a href="/xamarin/SfMaps/ShapeCustomization">Shape Customization</a></li>
+            <li><a href="/xamarin/SfMaps/Layers">Layers</a></li>
             <li><a href="/xamarin/SfMaps/UserInteraction">User Interaction</a></li>
             <li><a href="/xamarin/SfMaps/MapsProvider">Maps Providers</a></li>
         </ul>
