XAMARIN-20160 Need to add more information about Duration property.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -82,6 +82,7 @@
             <li><a href="/xamarin/sfbusyindicator/Set-Header">Set Header</a></li>
             <li><a href="/xamarin/sfbusyindicator/Sizing">Sizing</a></li>
             <li><a href="/xamarin/sfbusyindicator/AnimationType">Animation Type</a></li>
+            <li><a href="/xamarin/sfbusyindicator/Duration">Animation Duration</a></li>
         </ul>
     </li>
     <li>
