--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -278,6 +278,7 @@
 			 <li><a href="/xamarin/sfdiagram/DrawingMode">DrawingMode</a></li>
 			 <li><a href="/xamarin/sfdiagram/Gridlines">Gridlines</a></li>
 			<li><a href="/xamarin/sfdiagram/Userhandles">Userhandles</a></li>
+			<li><a href="/xamarin/sfdiagram/OverviewPanel">OverviewPanel</a></li>
         </ul>
     </li>
     <li>
