XAMARIN-20340 - SfTreeView UG documentation is committed in the hotfix branch

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -848,6 +848,13 @@
         </ul>
     </li>
 	<li>
+        SfTreeView
+        <ul>
+            <li><a href="/xamarin/sftreeview/Overview">Overview</a></li>
+            <li><a href="/xamarin/sftreeview/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
+	<li>
         <a href="/xamarin/Utility">Utilities</a>
     </li>
     <li>
