--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -854,6 +854,9 @@
         Release Notes
         <ul>
 		<li>
+                <a href="/xamarin/release-notes/v16.3.0.21">v16.3.0.21</a>
+            </li>
+		<li>
                 <a href="/xamarin/release-notes/v16.3.0.17">v16.3.0.17</a>
             </li>
 		<li>
