Support for bookmark navigation in SfPdfViewer UG updated for Xamarin.Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -562,6 +562,7 @@
 		<li><a href="/xamarin/sfpdfviewer/Shape-Annotation">Shape annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">Free text annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Bookmark-Navigation">Bookmark Navigation</a></li>
 		</ul>
 	</li>
     <li>
