XAMARIN-20420 -  Added control reference.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -814,6 +814,13 @@
         </ul>
     </li>
     <li>
+        SfTextInputLayout
+        <ul>
+            <li><a href="/xamarin/sftextinputlayout/overview">Overview</a></li>
+            <li><a href="/xamarin/sftextinputlayout/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
+    <li>
         XlsIO
         <ul>
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
