--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -818,6 +818,11 @@
         <ul>
             <li><a href="/xamarin/sftextinputlayout/overview">Overview</a></li>
             <li><a href="/xamarin/sftextinputlayout/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sftextinputlayout/supported-input-views">Supported Input Views</a></li>
+            <li><a href="/xamarin/sftextinputlayout/container-type">Container Type</a></li>
+            <li><a href="/xamarin/sftextinputlayout/custom-icons">Custom Icons</a></li>
+            <li><a href="/xamarin/sftextinputlayout/assistive-labels">Assistive Labels</a></li>
+            <li><a href="/xamarin/sftextinputlayout/states-and-colors">States and Colors</a></li> 
         </ul>
     </li>
     <li>
