Included Explore Libraries Package folder and respective md files.And removed old md files

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -23,7 +23,15 @@
 			<li><a href="/xamarin/installation-and-upgrade/upgrade-from-major-version-to-service-pack-version">Upgrade from major version to service pack version</a></li>
 			<li><a href="/xamarin/installation-and-upgrade/upgrade-from-trial-version-to-license-version ">Upgrade from trial version to license version</a></li>
 		</ul>
-	</li>
+    </li>
+    <li>
+        Explore Libraries Package
+         <ul>
+             <li><a href="/xamarin/Introduction/Explore Libraries Package/Mac">Explore Libraries Package in Mac</a></li>			
+             <li><a href="/xamarin/Introduction/Explore Libraries Package/Windows ">Explore Libraries Package in Windows</a></li>
+          
+         </ul>
+     </li>
 	<li>
         <a href="/xamarin/nuget-packages">NuGet Packages</a>
     </li>
