modified toc file.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -27,8 +27,8 @@
     <li>
         Explore Libraries Package
          <ul>
-             <li><a href="/xamarin/Introduction/Explore Libraries Package/Mac">Explore Libraries Package in Mac</a></li>			
-             <li><a href="/xamarin/Introduction/Explore Libraries Package/Windows ">Explore Libraries Package in Windows</a></li>
+             <li><a href="/xamarin/Introduction/Explore Libraries Package/Mac">Mac</a></li>			
+             <li><a href="/xamarin/Introduction/Explore Libraries Package/Windows ">Windows</a></li>
           
          </ul>
      </li>
