Toc File was added.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -249,7 +249,8 @@
             <li><a href="/xamarin/sfdatagrid/Unbound-Column">Unbound Column</a></li>
             <li><a href="/xamarin/sfdatagrid/Export-To-Excel">Export To Excel</a></li>
             <li><a href="/xamarin/sfdatagrid/Export-To-PDF">Export To PDF</a></li>
-       </ul>
+            <li><a href="/xamarin/sfdatagrid/Localization">Localization</a></li>
+        </ul>
     </li>
     <li>
         DataSource
@@ -597,9 +598,10 @@
  	    <li><a href="/xamarin/sfpopuplayout/Popup-Events">Popup Events</a></li>
             <li><a href="/xamarin/sfpopuplayout/Popup-Animations ">Popup Animations </a></li>
  	    <li><a href="/xamarin/sfpopuplayout/Layout-Customizations">Layout Customizations</a></li>
- 	    <li><a href="/xamarin/sfpopuplayout/Model-Window-Popup">Modal Window</a></li>
- 	    <li><a href="/xamarin/sfpopuplayout/How-to">How to</a></li>
- 	</ul>
+            <li><a href="/xamarin/sfpopuplayout/Model-Window-Popup">Modal Window</a></li>
+            <li><a href="/xamarin/sfpopuplayout/Localization">Localization</a></li>
+            <li><a href="/xamarin/sfpopuplayout/How-to">How to</a></li>
+        </ul>
     </li>
 	<li>
         Presentation
