XAMARIN-21340:Need to include details for TapGesture recognizer event with example. Committed the documentation for touch interaction.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -572,6 +572,7 @@
 		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">Free text annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Bookmark-Navigation">Bookmark Navigation</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Touch-Interaction-Events">Touch interaction events</a></li>
 		</ul>
 	</li>
     <li>
