SfDiagram new feature document are committed in Xamarin

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -278,7 +278,7 @@
     <li>
         SfDiagram
         <ul>
-            <li><a href="/xamarin/sfdiagram/overview">Overview</a></li>
+           <li><a href="/xamarin/sfdiagram/overview">Overview</a></li>
             <li><a href="/xamarin/sfdiagram/getting-started">Getting Started</a></li>
 			<li><a href="/xamarin/sfdiagram/diagram">Diagram</a></li>
             <li><a href="/xamarin/sfdiagram/node">Node</a></li>
@@ -291,6 +291,7 @@
 			 <li><a href="/xamarin/sfdiagram/DrawingMode">DrawingMode</a></li>
 			 <li><a href="/xamarin/sfdiagram/Gridlines">Gridlines</a></li>
 			<li><a href="/xamarin/sfdiagram/Userhandles">Userhandles</a></li>
+			<li><a href="/xamarin/sfdiagram/OverviewPanel">OverviewPanel</a></li>
         </ul>
     </li>
     <li>
