--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -164,7 +164,8 @@
             <li><a href="/xamarin/sfchart/chartannotation">Annotations</a></li>
             <li><a href="/xamarin/sfchart/technicalIndicators">Technical Indicators</a></li>
             <li><a href="/xamarin/sfchart/export">Exporting</a></li>        
-            <li><a href="/xamarin/sfchart/How-To">How to</a></li>        
+            <li><a href="/xamarin/sfchart/How-To">How to</a></li> 
+            <li><a href="/xamarin/sfchart/Localization">Localization</a></li>  			
         </ul>
     </li>
 	<li>
