Included localization for RangeNavigator.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -274,6 +274,7 @@
             <li><a href="/xamarin/SfDateTimeRangeNavigator/gridline">Grid Lines</a></li>
             <li><a href="/xamarin/SfDateTimeRangeNavigator/tooltip">Tooltip</a></li>
             <li><a href="/xamarin/SfDateTimeRangeNavigator/minorandmajorscale">Major and Minor scales</a></li>
+			<li><a href="/xamarin/SfDateTimeRangeNavigator/Localization">Localization</a></li>
         </ul>
     </li>
     <li>
