Added into toc file

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -841,6 +841,13 @@
         <ul>
             <li><a href="/xamarin/sftreeview/Overview">Overview</a></li>
             <li><a href="/xamarin/sftreeview/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sftreeview/Data-population">Data Population</a></li>
+            <li><a href="/xamarin/sftreeview/Apperance">Apperance</a></li>
+            <li><a href="/xamarin/sftreeview/Expand-collapse">Expand and Collapse</a></li>
+            <li><a href="/xamarin/sftreeview/Interactivity">Interactivity</a></li>
+            <li><a href="/xamarin/sftreeview/Scrolling">Scrolling</a></li>
+            <li><a href="/xamarin/sftreeview/Selection">Selection</a></li>
+            <li><a href="/xamarin/sftreeview/MVVM">MVVM</a></li>
         </ul>
     </li>
 	   
