SfPdfViewer UG for Localization in Xamarin

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -577,6 +577,7 @@
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Bookmark-Navigation">Bookmark Navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Touch-Interaction-Events">Touch interaction events</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Localization">Localization</a></li>
 		</ul>
 	</li>
     <li>
