XAMARIN-21506 - Included content for Data annotations and Linear layout in SfDataForm Xamarin Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -218,7 +218,8 @@
             <li><a href="/xamarin/sfdataform/Editing">Editing</a></li>           
             <li><a href="/xamarin/sfdataform/Editors">Editors</a></li>           
             <li><a href="/xamarin/sfdataform/Validation">Validation</a></li>           
-            <li><a href="/xamarin/sfdataform/Layout">Layout</a></li>           
+            <li><a href="/xamarin/sfdataform/Layout">Layout</a></li> 
+			<li><a href="/xamarin/sfdataform/data-annotations">Data annotations</a></li> 			
             <li><a href="/xamarin/sfdataform/Localization">Localization</a></li>
         </ul>
     </li>
