DOCINFRA-1894 Nuget package release v16.3.0.30 release notes file is committed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -902,6 +902,9 @@
     <li>
         Release Notes
         <ul>
+		 <li>
+                <a href="/xamarin/release-notes/v16.3.0.35">v16.3.0.35</a>
+            </li>
             <li>
                 <a href="/xamarin/release-notes/v16.3.0.29">v16.3.0.29</a>
             </li>
