--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -903,6 +903,9 @@
         Release Notes
         <ul>
 		 <li>
+                <a href="/xamarin/release-notes/v16.3.0.36">v16.3.0.36</a>
+            </li>
+		 <li>
                 <a href="/xamarin/release-notes/v16.3.0.35">v16.3.0.35</a>
             </li>
             <li>
