--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -902,6 +902,9 @@
     <li>
         Release Notes
         <ul>
+		<li>
+                <a href="/xamarin/release-notes/v16.4.0.x">v16.4.0.x</a>
+            </li>
 		 <li>
                 <a href="/xamarin/release-notes/v16.3.0.36">v16.3.0.36</a>
             </li>
