Prepared getting started for UG

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -82,6 +82,12 @@
         </ul>
     </li>
     <li>
+        SfBadgeView
+        <ul>
+            <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
+    <li>
         SfBusyIndicator
         <ul>
             <li><a href="/xamarin/sfbusyindicator/Overview">Overview</a></li>
