--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -401,6 +401,7 @@
             <li><a href="/xamarin/sfimageeditor/CustomView">CustomView</a></li>
            </ul>
     </li>	
+	
     <li>
         SfKanban
         <ul>
@@ -560,6 +561,13 @@
             <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>
             <li><a href="/file-formats/pdf/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
         </ul>
+    </li>
+	<li>
+        SfParallaxView
+        <ul>
+            <li><a href="/xamarin/sfparallaxview/overview">Overview</a></li>
+            <li><a href="/xamarin/sfparallaxview/Getting-Started">GettingStarted</a></li>			
+           </ul>
     </li>
 	<li>
         SfPdfViewer
