Have fixed the CI error

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -84,6 +84,7 @@
     <li>
         SfBadgeView
         <ul>
+            <li><a href="/xamarin/sfbadgeview/overview">Overview</a></li>
             <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
         </ul>
     </li>
