--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -575,7 +575,7 @@
 		<li><a href="/xamarin/sfpdfviewer/Ink">Ink PDFs</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Shape-Annotation">Shape annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/FreeText-Annotation">Free text annotations</a></li>
-		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Review PDF documents</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Text markup annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Bookmark-Navigation">Bookmark Navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Touch-Interaction-Events">Touch interaction events</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Localization">Localization</a></li>
