XAMARIN-23036 Committed the getting started UG documentation of border

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -81,6 +81,14 @@
             <li><a href="/xamarin/sfbarcode/barcode-customization">Barcode Customization</a></li>
         </ul>
     </li>
+
+    <li>
+        SfBorder
+        <ul>
+            <li><a href="/xamarin/sfborder/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
+
     <li>
         SfBadgeView
         <ul>
