Modified changes has been committed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -85,7 +85,9 @@
     <li>
         SfBorder
         <ul>
+            <li><a href="/xamarin/sfborder/overview">OverView</a></li>
             <li><a href="/xamarin/sfborder/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sfborder/customization">Customization</a></li>
         </ul>
     </li>
 
