Index was added and committed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -94,6 +94,13 @@
         </ul>
     </li>
     <li>
+        SfButton
+        <ul>
+            <li><a href="/xamarin/SfButton/Overview">Overview</a></li>
+            <li><a href="/xamarin/SfButton/GettingStarted">Getting Started</a></li>
+        </ul>
+    </li>
+    <li>
         Calculate
         <ul>
             <li><a href="/xamarin/calculate/Overview">Overview</a></li>
@@ -514,6 +521,7 @@
             <li><a href="/xamarin/sfnumerictextbox/Set-Maximum-Number-of-Decimal-Digits">Set Maximum Number of Decimal Digits</a></li>
             <li><a href="/xamarin/sfnumerictextbox/Assign-Nullable-Value">Assign Nullable Value</a></li>
             <li><a href="/xamarin/sfnumerictextbox/Events-and-Interactivity">Events and Interactivity</a></li>
+            <li><a href="/xamarin/sfnumerictextbox/Range-Support">Range Support</a></li>
         </ul>
     </li>
     <li>
