XAMARIN-21164 Chip control UG has been updated.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -148,6 +148,16 @@
             <li><a href="/xamarin/sfcarousel/how-to">How To</a></li>
         </ul>
     </li>
+
+    <li>
+        Chips
+        <ul>
+            <li><a href="/xamarin/chips/Overview">Overview</a></li>
+            <li><a href="/xamarin/chips/Getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/chips/Populating-chips-item">Populating Data</a></li>
+            <li><a href="/xamarin/chips/Types">Chips Types</a></li>
+        </ul>
+    </li>
     
     <li>
         SfChart
