--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -164,7 +164,7 @@
         <ul>
             <li><a href="/xamarin/chips/Overview">Overview</a></li>
             <li><a href="/xamarin/chips/Getting-started">Getting Started</a></li>
-            <li><a href="/xamarin/chips/Populating-chips-item">Populating Data</a></li>
+            <li><a href="/xamarin/chips/Populating-chips-item">Populating Items</a></li>
             <li><a href="/xamarin/chips/Types">Chips Types</a></li>
         </ul>
     </li>
