XAMARIN-22848: Have added the badge view

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -71,6 +71,13 @@
             <li><a href="/xamarin/sfautocomplete/customizing-autocomplete">Customizing AutoComplete</a></li>
         </ul>
     </li>
+	 <li>
+        SfBadgeView
+        <ul>
+            <li><a href="/xamarin/sfbadgeview/overview">Overview</a></li>
+            <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
     <li>
         SfBarcode
         <ul>
@@ -90,7 +97,6 @@
             <li><a href="/xamarin/sfborder/customization">Customization</a></li>
         </ul>
     </li>
-
     <li>
         SfBusyIndicator
         <ul>
