SfBackdropPage MD file committed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -71,6 +71,13 @@
             <li><a href="/xamarin/sfautocomplete/customizing-autocomplete">Customizing AutoComplete</a></li>
         </ul>
     </li>
+	<li>
+        SfBackdropPage
+        <ul>
+            <li><a href="/xamarin/sfbackdroppage/overview">Overview</a></li>
+            <li><a href="/xamarin/Sfbackdroppage/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
 	 <li>
         SfBadgeView
         <ul>
