Chip control UG has been updated.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -199,7 +199,15 @@
             <li><a href="/xamarin/sfcheckbox/event">Event</a></li>           
         </ul>
     </li>	
-    
+    <li>
+        Chips
+        <ul>
+            <li><a href="/xamarin/chips/Overview">Overview</a></li>
+            <li><a href="/xamarin/chips/Getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/chips/Populating-chips-item">Populating Items</a></li>
+            <li><a href="/xamarin/chips/Types">Chips Types</a></li>
+        </ul>
+    </li>
     <li>
         SfCircularGauge
         <ul>
