--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -92,7 +92,7 @@
     <li>
         SfBorder
         <ul>
-            <li><a href="/xamarin/sfborder/overview">OverView</a></li>
+            <li><a href="/xamarin/sfborder/overview">Overview</a></li>
             <li><a href="/xamarin/sfborder/getting-started">Getting Started</a></li>
             <li><a href="/xamarin/sfborder/customization">Customization</a></li>
         </ul>
