--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -115,6 +115,7 @@
         <ul>
             <li><a href="/xamarin/SfButton/Overview">Overview</a></li>
             <li><a href="/xamarin/SfButton/GettingStarted">Getting Started</a></li>
+			<li><a href="/xamarin/SfButton/VisualStates">VisualStates</a></li>
         </ul>
     </li>
     <li>
