--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -114,6 +114,7 @@
         <ul>
             <li><a href="/xamarin/SfButton/Overview">Overview</a></li>
             <li><a href="/xamarin/SfButton/GettingStarted">Getting Started</a></li>
+			<li><a href="/xamarin/SfButton/VisualStates">Visual States</a></li>
         </ul>
     </li>
     <li>
