Committed UG documentation for Form fillings and Scrollhead feature in Xamarin.Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -610,6 +610,8 @@
 		<li><a href="/xamarin/sfpdfviewer/Textmarkup">Text markup annotations</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Bookmark-Navigation">Bookmark Navigation</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Touch-Interaction-Events">Touch interaction events</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Working-with-PDF-AcroForms">Working with PDF AcroForms</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Working-with-Scrollhead">Working with ScrollHead</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Localization">Localization</a></li>
 		</ul>
 	</li>
