--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -187,7 +187,7 @@
             <li><a href="/xamarin/sfchart/legend">Legend</a></li>
             <li><a href="/xamarin/sfchart/appearance">Appearance</a></li>
             <li><a href="/xamarin/sfchart/zoompan">Zooming and Panning</a></li>
-            <li><a href="/xamarin/sfchart/selection">Data Point Selection</a></li>
+            <li><a href="/xamarin/sfchart/selection">Selection</a></li>
             <li><a href="/xamarin/sfchart/trackball">Trackball</a></li>
             <li><a href="/xamarin/sfchart/tooltip">Tooltip</a></li>
             <li><a href="/xamarin/sfchart/stripLines">StripLines</a></li>
