--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -898,7 +898,9 @@
             <li><a href="/xamarin/sftreeview/Scrolling">Scrolling</a></li>
             <li><a href="/xamarin/sftreeview/Selection">Selection</a></li>
             <li><a href="/xamarin/sftreeview/MVVM">MVVM</a></li>
-        </ul>
+            <li><a href="/xamarin/sftreeview/On-demand-loading">OnDemandLoading</a></li>
+            <li><a href="/xamarin/sftreeview/RTL">Right-to-left localization</a></li>			
+		</ul>
     </li>
 	   
     <li>
