toc file changed

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -46,6 +46,9 @@
         <ul>
             <li><a href="/xamarin/introduction/troubleshooting/PathTooLongException">System.IO.PathTooLongException occurs during sample browser compilation</a></li>      
         </ul>
+		<ul>
+            <li><a href="/xamarin/introduction/troubleshooting/ErrorProcessingMethod">Error processing method occurs during Syncfusion core project compilation</a></li>      
+        </ul>
     </li>
 	 <li>
         <a href="/xamarin/introduction/Control-Dependencies">Control Dependencies</a>
