XAMARIN-22848: Merge request created for development

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -78,6 +78,13 @@
             <li><a href="/xamarin/Sfbackdroppage/getting-started">Getting Started</a></li>
         </ul>
     </li>
+     <li>
+        SfBadgeView
+        <ul>
+            <li><a href="/xamarin/sfbadgeview/overview">Overview</a></li>
+            <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
     <li>
         SfBarcode
         <ul>
