AddedItems and RemovedItems, DeleteButtonPlacement UG content has been added.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -69,6 +69,7 @@
             <li><a href="/xamarin/sfautocomplete/prefix-characters-constraint">Prefix Characters Constraint</a></li>
             <li><a href="/xamarin/sfautocomplete/watermark">Watermark</a></li>
             <li><a href="/xamarin/sfautocomplete/customizing-autocomplete">Customizing AutoComplete</a></li>
+             <li><a href="/xamarin/sfautocomplete/how-to">How To</a></li>
         </ul>
     </li>
 	 <li>
