--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -960,6 +960,9 @@
     <li>
         Release Notes
         <ul>
+             <li>
+                <a href="/xamarin/release-notes/v16.4.0.42">v16.4.0.42</a>
+            </li>
 		 <li>
                 <a href="/xamarin/release-notes/v16.4.0.40">v16.4.0.40</a>
             </li>
