XAMARIN-22901: Have added the badgesettings and map event

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -87,6 +87,7 @@
         <ul>
             <li><a href="/xamarin/sfbadgeview/overview">Overview</a></li>
             <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
+            <li><a href="/xamarin/sfbadgeview/badgeview-settings">BadgeView Settings</a></li>
         </ul>
     </li>
     <li>
