--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -294,6 +294,7 @@
             <li><a href="/xamarin/sfdatagrid/paging">Paging</a></li>
             <li><a href="/xamarin/sfdatagrid/row-height-customization">Row Height Customization</a></li>
             <li><a href="/xamarin/sfdatagrid/Scrolling">Scrolling</a></li>
+			<li><a href="/xamarin/sfdatagrid/Unbound-Row">Unbound Row</a></li>
             <li><a href="/xamarin/sfdatagrid/Unbound-Column">Unbound Column</a></li>
             <li><a href="/xamarin/sfdatagrid/Export-To-Excel">Export To Excel</a></li>
             <li><a href="/xamarin/sfdatagrid/Export-To-PDF">Export To PDF</a></li>
