XAMARIN-22901: Have added the gauge features

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -233,7 +233,8 @@
             <li><a href="/xamarin/circulargauge/ranges">Ranges</a></li>   
             <li><a href="/xamarin/circulargauge/pointers">Pointers</a></li>			
 			<li><a href="/xamarin/circulargauge/header">Headers</a></li>
-			<li><a href="/xamarin/circulargauge/annotations">Annotations</a></li>
+            <li><a href="/xamarin/circulargauge/annotations">Annotations</a></li>
+            <li><a href="/xamarin/circulargauge/how-to">How to</a></li>
         </ul>
     </li>
     
